[gd_scene load_steps=8 format=3 uid="uid://dp7jdk5hksqyw"]

[ext_resource type="Script" path="res://objects/characters/wizard.gd" id="1_wq6b8"]
[ext_resource type="Texture2D" uid="uid://cirydnnuawr80" path="res://img/light.png" id="2_oduc2"]
[ext_resource type="Texture2D" uid="uid://bcuchbl5ppg0j" path="res://img/player/walk.png" id="3_c8eai"]
[ext_resource type="Texture2D" uid="uid://bi4wrsbqnkjjy" path="res://img/player/idle.png" id="4_bvkfb"]
[ext_resource type="Texture2D" uid="uid://bp4qtf0cxhytr" path="res://img/player/idle_attack.png" id="5_td58s"]
[ext_resource type="Texture2D" uid="uid://cd8tn82cme0s2" path="res://img/player/walk_attack.png" id="6_5euna"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0d6cu"]
radius = 30.0

[node name="player" type="Node"]

[node name="player_body" type="CharacterBody2D" parent="."]
scale = Vector2(2, 2)
motion_mode = 1
floor_block_on_wall = false
script = ExtResource("1_wq6b8")

[node name="player_camera" type="Camera2D" parent="player_body"]

[node name="player_collider" type="CollisionShape2D" parent="player_body"]
shape = SubResource("CircleShape2D_0d6cu")

[node name="PointLight2D" type="PointLight2D" parent="player_body"]
shadow_enabled = true
texture = ExtResource("2_oduc2")
texture_scale = 2.49

[node name="walk_sprite" type="Sprite2D" parent="player_body"]
visible = false
texture = ExtResource("3_c8eai")
hframes = 9
vframes = 8
region_rect = Rect2(0, 0, 100, 100)

[node name="idle_sprite" type="Sprite2D" parent="player_body"]
texture = ExtResource("4_bvkfb")
vframes = 8

[node name="idle_attack_sprite" type="Sprite2D" parent="player_body"]
visible = false
texture = ExtResource("5_td58s")
vframes = 8

[node name="walk_attack_sprite" type="Sprite2D" parent="player_body"]
visible = false
texture = ExtResource("6_5euna")
hframes = 9
vframes = 8

[node name="player_ui" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="player_ui"]
anchors_preset = -1
anchor_right = 0.4
value = 80.0
